--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ flask = "*"
 pandas = "*"
 pathlib = "*"
 simplejson = "*"
+google-api-python-client = "*"
+google-auth-httplib2 = "*"
+google-auth-oauthlib = "*"
 
 [requires]
 python_version = "3.8"
