--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ simplejson = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
+cloudinary = "*"
+google-cloud-storage = "*"
 
 [requires]
 python_version = "3.8"
