--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
 cloudinary = "*"
 google-cloud-storage = "*"
+flask-cors = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.8"
