--- a/app.yaml
+++ b/app.yaml
@@ -4,10 +4,11 @@ env: flex
 beta_settings:
   cloud_sql_instances: coalam-e2dce:europe-west1:coalam-postgres=tcp:3000
 
-manual_scaling:
-  instances: 1
+automatic_scaling:
+  min_num_instances: 1
+  max_num_instances: 1
 
 resources:
-  cpu: .5
-  memory_gb: 0.9
+  cpu: .2
+  memory_gb: 0.5
   disk_size_gb: 10
